@@ -37,9 +37,19 @@
   </kudos>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="43.beta" date="2022-08-07">
+      <description>
+      <p>Fonts 43.beta comes with a new "About" button in the main window and the following translation updates:</p>
+        <ul>
+          <li>Abkhazian</li>
+          <li>Georgian</li>
+          <li>Occitan (post 1500)</li>
+        </ul>
+      </description>
+    </release>
     <release version="43.alpha" date="2022-07-13">
       <description>
-      <p>Fonts 43.0 comes with the following translation updates:</p>
+      <p>Fonts 43.alpha comes with the following translation updates:</p>
         <ul>
           <li>Dutch</li>
           <li>Friulian</li>
