@@ -1,6 +1,14 @@
+GNOME Font Viewer - 43.beta
+-------------------------------------------------------------------------------
+Fonts 43.beta comes with a new "About" button in the main window and the
+following translation updates:
+ - Abkhazian
+ - Georgian
+ - Occitan (post 1500)
+
 GNOME Font Viewer - 43.alpha
 -------------------------------------------------------------------------------
-Fonts 43.0 comes with the following translation updates:
+Fonts 43.alpha comes with the following translation updates:
  - Dutch
  - Friulian
  - Georgian
